--- a/style.css
+++ b/style.css
@@ -1,9 +1,33 @@
-.hg-conteudo {
-    background-color: silver;
+.hg-conteudo > main {
+    border-width: 5px; border-style: solid; border-color: black; border-radius: 50px; box-shadow: 8px 8px 8px 8px black;
+    text-align: center;
+    background-color: black;
+    color: yellow;
+    font-family: 'Concert One', cursive;
 }
 
-.hg-conteudo > main {
-    background-color: #aaa;
+header {
+    font-size: 30px;
+    
+    height: 50px;
+    text-align: center;
+    padding: 20px;
+    letter-spacing: 5px;
+    font-family: 'Grandstander', cursive;
+}
+
+footer {
+    
+    font-weight: bold;
+    font-size: 20px;
+    padding: 50px;
+    font-family: 'Acme', sans-serif;
+}
+
+p {
+   margin: 19.2px;
+   text-align: left;
+   font-family: 'Concert One', cursive;
 }
 
 body {
@@ -12,6 +36,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-flow: column;
+    background-image: url(Yellow_glare_abstract_line-Vector_Design_HD_Wallpaper_1366x768.jpg);
 }
 
 .hg-conteudo {
